Updated Snake Game with larger screen size and additional improvements

--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
 <body>
   <div class="popup-container">
     <h1>Snake Game</h1>
-    <canvas id="gameCanvas" width="400" height="400"></canvas>
+    <canvas id="gameCanvas" width="400" height="400"></canvas> <!-- Single canvas element -->
     <div id="controls">
       <label for="themes">Theme:</label>
       <select id="themes">
